--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"nodemon backend/index"
+    "dev": "nodemon backend/index"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "moment": "^2.29.4",
+    "mongoose": "^6.6.5",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20"
   }
 }
